# hlsl_reflect

./: CMakeLists.txt  LICENSE  README.md  syntax.txt
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp  parse.cpp
src/lib/: literal.cpp  literal.h  match_literal.cpp  match_literal.h  parser.h  scanner.cpp  scanner.h  token.cpp  token.h  token_type.cpp  token_type.h
src/lib/ast/: address_space.h  ast.cpp  ast.h  ast_node.cpp  ast_node.h  ast_node_type.h  base_type.cpp  base_type.h  buffer_type.h  interpolation_modifier.h  operator.cpp  operator.h  sampler_type.h  storage_class.h  type_flags.h  type_modifier.h
src/lib/hlsl/: ast.h  literal.cpp  literal.h  parser.cpp  parser.h  print_visitor.h  scanner.cpp  scanner.h  template_types.h  token.cpp  token.h  token_type.cpp  token_type.h  visitor.cpp  visitor.h
src/lib/hlsl/ast/: address_space.h  ast.cpp  ast.h  ast_node.cpp  ast_node.h  ast_node_type.h  ast_type.h  attribute_type.h  base_type.cpp  base_type.h  buffer_type.h  data_types.cpp  data_types.h  interpolation_modifier.h  operator.cpp  operator.h  sampler_type.h  storage_class.cpp  storage_class.h  type_flags.h  type_modifier.h
src/lib/hlsl/parser/: effect_state.cpp  effect_state.h
src/lib/hlsl/scanner/: literal.h  template_types.h
src/lib/hlsl/visitor/: visitor.cpp  visitor.h
src/lib/reader/hlsl/: parse_exception.h  parser.cpp  parser.h  scanner.cpp  scanner.h  token.cpp  token.h  token_to_ast.cpp  token_to_ast.h  token_type.cpp  token_type.h
src/lib/reader/hlsl/parser/: effect_state.cpp  effect_state.h
src/lib/reader/hlsl/scanner/: literal.cpp  literal.h  template_types.h
src/lib/util/: allocator.h  string_util.cpp  string_util.h
src/lib/visitor/: glsl_generator.h  print_visitor.h  prune_tree.cpp  prune_tree.h  visibility_visitor.h  visitor.cpp  visitor.h
src/test/: CMakeLists.txt  main.cpp  test.cpp  test.h  test_scanner.cpp  test_scanner.h  test_token_type.cpp  test_token_type.h
src/test/_data/hlsl/: urp_bloom.hlsl
src/test/hlsl/: test_parser.cpp  test_parser.h  test_scanner.cpp  test_scanner.h  test_token_type.cpp  test_token_type.h
src/test/visitor/: test_prune_tree.h
tools/: README.md  gen_token_type.py  keywords.txt  tokens.txt  types.txt  vector_matrix_types.txt
